libfilesys-smbclient-perl (3.1-3) UNRELEASED; urgency=low

  * debian/rules: touch Makefile in clean target after unpatching
    Makefile.PL to prevent it from being re-built; allows building twice
    in a row.
  * debian/copyright: point to author-independent URL of the upstream
    source.

 -- gregor herrmann <gregoa@debian.org>  Wed, 30 Apr 2008 23:32:44 +0200

libfilesys-smbclient-perl (3.1-2) unstable; urgency=low

  [ gregor herrmann ]
  * debian/control: Added: Vcs-Svn field (source stanza); Vcs-Browser
    field (source stanza); Homepage field (source stanza). Removed: XS-
    Vcs-Svn fields.
  * debian/rules: delete /usr/share/perl5 only if it exists.

  [ Damyan Ivanov ]
  * debian/watch: use dist-vased URL, better pattern
  * debian/rules:
    + move (still disabled) test suite in build-stamp target
    + use "$@" when touching stamps
    + remove *-stamp files before realclean
    + fix install(-stamp) dependencies
    + remove commented-out dh_* calls; remove unused dh_link and dh_makeshlibs
      calls
    + when installing t/ as examples, keep the directory
  * Move changes to Makefile.PL into 10_Makefile.PL.patch
    + add quilt to build process
  * chmod 0644 smb2www.css (thanks, lintian)
  * Standards-Version: 3.7.3 (no changes)
  * debhelper compatibility level 6
  * add myself to Uploaders

 -- Damyan Ivanov <dmn@debian.org>  Mon, 21 Jan 2008 14:16:39 +0200

libfilesys-smbclient-perl (3.1-1) unstable; urgency=low

  * New upstream release (Closes: #329542)
  * Sorry, taking over the package due to its maintainer being MIA,
    putting it in the Debian Perl Group's loving hands

 -- Gunnar Wolf <gwolf@debian.org>  Wed, 29 Nov 2006 19:13:55 -0600

libfilesys-smbclient-perl (1.5-2) unstable; urgency=low

  * Updated 'priority' to extra: libsmbclient, on which this package
    depends, is in the 'extra' group.
  * Updated the 'copyright' file to state upstream's copyright and also
    the copyright of the Debian packaging.
