@@ -5,8 +5,9 @@ libfilesys-smbclient-perl (3.1-3) UNRELEASED; urgency=low
     in a row.
   * debian/copyright: point to author-independent URL of the upstream
     source.
+  * Refresh debian/rules, no functional changes.
 
- -- gregor herrmann <gregoa@debian.org>  Wed, 30 Apr 2008 23:32:44 +0200
+ -- gregor herrmann <gregoa@debian.org>  Wed, 30 Apr 2008 23:36:46 +0200
 
 libfilesys-smbclient-perl (3.1-2) unstable; urgency=low
 
